# cargo-kill

./: Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: ci.yml
src/: main.rs
